fixed spacing issue in main-content

--- a/less/index.less
+++ b/less/index.less
@@ -152,6 +152,7 @@ h1 {
 	} //closes anchor
 	@media (max-width: 500px) {
 		justify-content: space-between;
+		height: 3vh; 
 		
 		
 	} //closes nav-wrapper media query
@@ -224,7 +225,7 @@ h1 {
 			flex-direction: column;
 			
 			justify-content: space-between;
-			height: 45vh; 
+			height: 53vh; 
 			h2 {
 				margin-bottom: 2vh; 
 			} //closes media query h2
